# cardillo

./: .gitignore  ModificationLog.txt  README.md  rod_ode.py  setup.py
cardillo/: __init__.py  frame.py  rigid_body.py  rigid_connection.py  system.py
cardillo/constraints/: __init__.py  _base.py  gear_transmission.py  rigid_connection.py
cardillo/cpp/: algebra.cpp  setup.py
cardillo/discrete/: __init__.py  _base.py  frame.py  meshed.py  point_mass.py  rigid_body.py
cardillo/forces/: __init__.py  force.py  moment.py  tendon.py
cardillo/interactions/: n_point_interaction.py
cardillo/jax_math/: __init__.py  algebra.py  rotations.py
cardillo/math/: __init__.py  algebra.py  constants.py  fsolve.py  rotations.py
cardillo/math_jax/: __init__.py  algebra.py  rotations.py
cardillo/math_numba/: algebra.py  rotations.py
cardillo/rods/: __init__.py  _base.py  _base_export.py  _cross_section.py  _material_models.py  cosseratRod.py  discreteRod.py  force_line_distributed.py  marker.py  sensor.py
cardillo/solver/: __init__.py  (+5 more)
examples/: helix.py  tendon_driven_continuum_manipulator.py  wilberforce2p0.py
ros_ws/: test_cart_pole_dynamics.py  test_quadcopter.py
ros_ws/src/quadcopter/: package.xml  setup.cfg  setup.py
ros_ws/src/quadcopter/launch/: all_nodes.launch.py
ros_ws/src/quadcopter/src/quadcopter/nodes/: controller.py  simulator.py  visualizer.py
scripts_tdcrobots/: example_sim_rod.py  temp_dyn.py  tendon_control_single_solve.py  test_tdcm_li2023.py
test/: test_discreterod_dynamics.py  test_discreterod_statics.py  test_meshed_rigid_bodies.py
(+37 files in other folders)
